cmake_minimum_required(VERSION 3.10)
project(urandomcollide)
set(CMAKE_C_STANDARD 11)
add_executable(urandomcollide urandomcollide.c)
message("CMAKE_BUILD_TYPE = ${CMAKE_BUILD_TYPE}")
if(CMAKE_BUILD_TYPE MATCHES Debug)
    message("DEBUG")
    target_compile_definitions(urandomcollide PUBLIC -DDEBUG)
endif()
target_link_libraries(urandomcollide -static)